@@ -4,9 +4,9 @@
  */
 package nl.vpro.validation;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URISyntaxException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 
 import javax.validation.ConstraintValidator;
 import javax.validation.ConstraintValidatorContext;
@@ -15,16 +15,14 @@ import javax.validation.ConstraintValidatorContext;
  * @author rico
  */
 public class PathSegmentValidator implements ConstraintValidator<PathSegment, String> {
-    @Override
-    public void initialize(PathSegment constraintAnnotation) {
-    }
+
 
     @Override
     public boolean isValid(String pathSegment, ConstraintValidatorContext context) {
         return isValid(pathSegment);
     }
     protected static boolean isValid(String pathSegment) {
-        if (pathSegment == null || pathSegment.length() == 0) {
+        if (pathSegment == null || pathSegment.isEmpty()) {
             return false;
         }
 
@@ -36,10 +34,6 @@ public class PathSegmentValidator implements ConstraintValidator<PathSegment, St
             return false;
         }
 
-        try {
-            return URLDecoder.decode(pathSegment, "UTF-8").equals(url.getPath());
-        } catch (UnsupportedEncodingException e) {
-            return false;
-        }
+        return URLDecoder.decode(pathSegment, StandardCharsets.UTF_8).equals(url.getPath());
     }
 }
